# birddog

./: .dockerignore  .gitignore  .hackathon-submissions.md  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  unittest.yml
demo_data/: dashboard-fixture.jsonl
docs/: HACKATHON_SUBMISSION.md
examples/: birddog_walkthrough.ipynb  scrape_demo.py  serp_then_unlock.py  watchdog_agent.py
src/birddog/: __init__.py  _core.py  attest.py  birddog.py  dashboard.py
tests/: test_attest.py  test_birddog.py  test_core.py  test_pure.py
